src/test/deca/context/valid/decaObjet/emptyClass/06assignation.deca
class A {
    
}
{
    A a = new A(), b;
    b = a;
}